--- a/scss/base.scss
+++ b/scss/base.scss
@@ -85,13 +85,19 @@ ul {
 .wrapper {
     overflow: hidden;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 
     &__content {
         flex: 1;
     }
+}
+
+.main-content {
+    height: 100%;
+    transition: transform 1s;
+    will-change: transform;
 }
 
 img {
