--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ img {
 }
 
 .section {
-  height: 100vh;
+  height: 100%;
   min-height: 650px;
   background-color: #ffffff;
   display: flex;
@@ -1582,6 +1582,15 @@ img {
   .fixed-menu {
     display: none;
   }
+}
+.fixed-menu--black .fixed-menu__link:before {
+  background: black;
+}
+.fixed-menu--black .fixed-menu__item--active .fixed-menu__link {
+  border-color: black;
+}
+.fixed-menu--black .fixed-menu__item--active .fixed-menu__link:before {
+  background: black;
 }
 
 .fixed-menu__item {
