--- a/css/main.css
+++ b/css/main.css
@@ -1374,7 +1374,7 @@ img {
 }
 
 .color-section {
-  background: url(../../../img/content/hp-hero-powerbeats.jpg.large.1x.jpg.png) center center/cover no-repeat;
+  background: url(../../../img/content/color-background.png) center center/cover no-repeat;
   background-size: cover;
   position: relative;
 }
