--- a/scss/blocks/_color-section.scss
+++ b/scss/blocks/_color-section.scss
@@ -1,5 +1,5 @@
 .color-section {
-    background: url(../../img/content/color-background.png) center center / cover no-repeat;
+    background: url(../../../beats/img/content/color-background.png) center center / cover no-repeat;
     background-size: cover;
     position: relative;
 }
