video HTML5 API js

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,5 +58,6 @@ $z-index-menu: 100;
 @import "blocks/socials";
 @import "blocks/fixed-menu";
 @import "blocks/contact";
+@import "blocks/player-section";
 @import "blocks/footer";
 @import "blocks/modal";
