--- a/css/main.css
+++ b/css/main.css
@@ -1668,6 +1668,7 @@ img {
   height: 100%;
   flex-direction: column;
   align-items: center;
+  max-width: 660px;
 }
 .player--active .player__start-img {
   display: none;
@@ -1692,7 +1693,8 @@ img {
 }
 
 .player__splash {
-  width: 658px;
+  width: 100%;
+  max-width: 660px;
 }
 
 .player__splash-svg {
@@ -1726,15 +1728,15 @@ img {
 
 .player__controls {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  width: 658px;
+  width: 100%;
   height: 35px;
   background-color: #151515;
 }
 
 .player__playback {
-  width: 444px;
+  width: 69%;
   height: 4px;
   background: #303030;
   position: relative;
@@ -1769,7 +1771,7 @@ img {
 }
 
 .player__volume-track {
-  width: 58px;
+  width: 9%;
   height: 4px;
   background: #303030;
   position: relative;
