--- a/scss/blocks/_player-section.scss
+++ b/scss/blocks/_player-section.scss
@@ -16,6 +16,7 @@
     height: 100%;
     flex-direction: column;
     align-items: center;
+    max-width: 660px;
 
     &--active {
         .player__start-img {
@@ -45,7 +46,8 @@
 }
 
 .player__splash {
-    width: 658px;
+    width: 100%;
+    max-width: 660px;
 }
 
 .player__splash-svg {
@@ -80,15 +82,15 @@
 
 .player__controls {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    width: 658px;
+    width: 100%;
     height: 35px;
     background-color: #151515;
 }
 
 .player__playback {
-    width: 444px;
+    width: 69%;
     height: 4px;
     background: #303030;
     position: relative;
@@ -123,7 +125,7 @@
 }
 
 .player__volume-track {
-    width: 58px;
+    width: 9%;
     height: 4px;
     background: #303030;
     position: relative;
