--- a/scss/blocks/_player-section.scss
+++ b/scss/blocks/_player-section.scss
@@ -60,6 +60,11 @@
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+
+    @include phones {
+        width: 31px;
+        height: 47px;
+    }
 }
 
 .player__start {
@@ -77,6 +82,11 @@
 
     &--pause {
         display: none;
+    }
+
+    @include phones {
+        width: 10px;
+        height: 13px;
     }
 }
 
@@ -109,6 +119,11 @@
     top: 50%;
     padding: 0;
     cursor: pointer;
+
+    @include phones {
+        width: 8px;
+        height: 8px;
+    }
 }
 
 .player__volume {
@@ -122,6 +137,11 @@
     width: 18px;
     height: 22px;
     fill: #fff;
+
+    @include phones {
+        width: 11px;
+        height: 13px;
+    }
 }
 
 .player__volume-track {
@@ -144,4 +164,9 @@
     top: 50%;
     padding: 0;
     cursor: pointer;
+
+    @include phones {
+        width: 8px;
+        height: 8px;
+    }
 }
