--- a/src/scss/blocks/_player-section.scss
+++ b/src/scss/blocks/_player-section.scss
@@ -6,7 +6,6 @@
 .video {
     max-width: 660px;
     max-height: 370px;
-    display: none;
 }
 
 .player {
@@ -19,28 +18,27 @@
     max-width: 660px;
 
     &--active {
-        .player__start-img {
+        .play__item {
             display: none;
-            &--pause {
-                display: block;
-            }
         }
         .player__splash-svg {
             display: none;
         }
 
-        .video {
-            display: block;
-        }
-
         .player__splash {
             display: none;
+        }
+
+        .duration__item-img {
+            display: none;
+            &--pause {
+                display: block;
+            }
         }
     }
 }
 
 .player__wrapper {
-    cursor: pointer;
     position: relative;
     display: flex;
 }
@@ -50,7 +48,7 @@
     max-width: 660px;
 }
 
-.player__splash-svg {
+.play__item {
     position: absolute;
     width: 52px;
     height: 74px;
@@ -60,6 +58,7 @@
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    cursor: pointer;
 
     @include phones {
         width: 31px;
@@ -67,44 +66,16 @@
     }
 }
 
-.player__start {
-    cursor: pointer;
-    display: flex;
-    border: none;
-    outline: none;
-    background: transparent;
-}
 
-.player__start-img {
-    fill: #fff;
-    width: 16px;
-    height: 22px;
-
-    &--pause {
-        display: none;
-    }
-
-    @include phones {
-        width: 10px;
-        height: 13px;
-    }
-}
 
 .player__controls {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     width: 100%;
     height: 35px;
     background-color: #151515;
 }
 
-.player__playback {
-    width: 58%;
-    height: 4px;
-    background: #303030;
-    position: relative;
-}
+
 
 .player__playback-button {
     width: 12px;
@@ -126,47 +97,3 @@
     }
 }
 
-.player__volume {
-    display: flex;
-    border: none;
-    outline: none;
-    background: transparent;
-}
-
-.player__volume-img {
-    width: 18px;
-    height: 22px;
-    fill: #fff;
-
-    @include phones {
-        width: 11px;
-        height: 13px;
-    }
-}
-
-.player__volume-track {
-    width: 8%;
-    height: 4px;
-    background: #303030;
-    position: relative;
-}
-
-.player__volume-button {
-    width: 12px;
-    height: 12px;
-    background-color: #e01f3d;
-    border: none;
-    outline: none;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    left: 0;
-    top: 50%;
-    padding: 0;
-    cursor: pointer;
-
-    @include phones {
-        width: 8px;
-        height: 8px;
-    }
-}
