--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -61,3 +61,5 @@ $z-index-menu: 100;
 @import "blocks/player-section";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/duration";
+@import "blocks/sound";
